--- a/app/src/main/res/menu/add_profile_menu.xml
+++ b/app/src/main/res/menu/add_profile_menu.xml
@@ -77,9 +77,14 @@
                     <item
                         android:id="@+id/action_new_config"
                         android:title="@string/custom_config" />
+
                     <item
                         android:id="@+id/action_new_chain"
                         android:title="@string/proxy_chain" />
+
+                    <item
+                        android:id="@+id/action_new_proxy_group"
+                        android:title="@string/action_proxy_group" />
                 </menu>
             </item>
         </menu>
